@@ -199,6 +199,11 @@ typedef enum input_key {
   INPUT_JOYSTICK_FIRE_8,
   INPUT_JOYSTICK_FIRE_9,
   INPUT_JOYSTICK_FIRE_10,
+  INPUT_JOYSTICK_FIRE_11,
+  INPUT_JOYSTICK_FIRE_12,
+  INPUT_JOYSTICK_FIRE_13,
+  INPUT_JOYSTICK_FIRE_14,
+  INPUT_JOYSTICK_FIRE_15,
 
 } input_key;
 
